--- a/pages/17975.html
+++ b/pages/17975.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -903,7 +903,7 @@ margin-left: 0em;
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a></strong></p>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/force'>force</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/force'>force</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
 
 <ul>
 <li>
@@ -923,13 +923,13 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p><strong>scalar bosons</strong></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Higgs+boson'>Higgs boson</a>, <a class='existingWikiWord' href='/nlab/show/cosmic+inflation'>inflaton</a> (<a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field</a>)</li>
 </ul>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/matter'>matter</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a></strong> (<a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinors</a>)</p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/matter'>matter</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a></strong> (<a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinors</a>, <a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac fields</a>)</p>
 
 <ul>
 <li>
@@ -943,6 +943,10 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/neutrino'>neutrino</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/muon'>muon</a></p>
+</li>
 </ul>
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/hadron'>hadron</a></strong> (<a class='existingWikiWord' href='/nlab/show/bound+state'>bound states</a> of the above <a class='existingWikiWord' href='/nlab/show/quark'>quarks</a>)</p>
@@ -950,6 +954,10 @@ margin-left: 0em;
 <ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/meson'>meson</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/pion'>pion</a></li>
+</ul>
 </li>
 
 <li>
@@ -975,7 +983,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> - <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> - <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> (<a class='existingWikiWord' href='/nlab/show/Rarita-Schwinger+field'>Rarita-Schwinger field</a>)</p>
 </li>
 
 <li>
@@ -1001,15 +1009,27 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Rarita-Schwinger+field'>Rarita-Schwinger field</a></p>
-</li>
-
-<li>
 <p><a class='existingWikiWord' href='/nlab/show/monopole'>monopole</a></p>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/dual+graviton'>dual graviton</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/auxiliary+field'>auxiliary fields</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/ghost+field'>ghost field</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/antifield'>antifield</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/anti-ghost+field'>antighost field</a>, <a class='existingWikiWord' href='/nlab/show/Nakanishi-Lautrup+field'>Nakanishi-Lautrup field</a></p>
 </li>
 </ul>
 </div>
@@ -1030,7 +1050,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><em><a class='existingWikiWord' href='/nlab/show/Bose-Einstein+condensate'>Bose-Einstein condensate</a> (BEC) dark matter</em></p>
+<p><em><a class='existingWikiWord' href='/nlab/show/Bose-Einstein+condensate'>Bose-Einstein condensate</a> (BEC) dark matter</em> (<a href='#SikivieYang09'>Sikivie-Yang 09</a>)</p>
 </li>
 
 <li>
@@ -1064,7 +1084,13 @@ margin-left: 0em;
 <li id='BaldeschiGelminiRuffini83'>M. R. Baldeschi, G. B. Gelmini, and R. Ruffini, Physics Letters B 122, 221 (1983).</li>
 </ul>
 
-<p>The proposal in th guise of “fuzzy dark matter” is originally due to</p>
+<p>The role of the <a class='existingWikiWord' href='/nlab/show/Bose-Einstein+condensate'>Bose-Einstein condensate</a> of <a class='existingWikiWord' href='/nlab/show/axion'>axions</a> on galactic scales was considered in</p>
+
+<ul>
+<li id='SikivieYang09'><a class='existingWikiWord' href='/nlab/show/Pierre+Sikivie'>Pierre Sikivie</a>, Q. Yang, <em>Bose-Einstein Condensation of Dark Matter Axions</em>, Phys.Rev.Lett.103:111301, 2009 (<a href='https://arxiv.org/abs/0901.1106'>arXiv:0901.1106</a>)</li>
+</ul>
+
+<p>The proposal in the guise of “fuzzy dark matter” is originally due to</p>
 
 <ul>
 <li id='WuBarkanaGruzinov00'>Wayne Hu, Rennan Barkana, Andrei Gruzinov, <em>Cold and Fuzzy Dark Matter</em>, Phys.Rev.Lett. 85 (2000) 1158-1161 (<a href='https://arxiv.org/abs/astro-ph/0003365'>arXiv:astro-ph/0003365</a>)</li>
@@ -1118,14 +1144,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on August 29, 2017 12:55:36 
+  Revised on October 26, 2017 10:58:01 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (192.41.132.62)
+  (195.37.234.86)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/fuzzy+dark+matter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fuzzy+dark+matter/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/fuzzy+dark+matter" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fuzzy+dark+matter" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/fuzzy+dark+matter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fuzzy+dark+matter/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/fuzzy+dark+matter" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fuzzy+dark+matter" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
