--- a/pages/18720.html
+++ b/pages/18720.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Chenchang Zhu in nLab
+      Pierre Sikivie in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Chenchang Zhu
+      Pierre Sikivie
   </h1>
 
 
@@ -308,101 +308,42 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>Hi, this is Chenchang Zhu or 朱晨畅 <img alt='' src='https://lh5.googleusercontent.com/Upb44JaQgs7JvC1BvXma6X4-TGvxcfHM3Dfq2vcVgUo=w266-h199-p-no'/></p>
+    <ul>
+<li>
+<p><a href='https://www.phys.ufl.edu/~sikivie/'>webpage</a></p>
+</li>
 
-<p>I’ve got tenured at <a href='http://www.uni-math.gwdg.de/zhu'>Göttingen</a> (since 2013), and were long time in its <a href='http://www.crcg.de/wiki/User:Zhu'>Courant Center</a> (from 2008), before that I was Maitre de conferences (assistant professor) in <a href='http://www-fourier.ujf-grenoble.fr/~zhu/'>Grenoble</a> (from 2006), post-doc in <a href='http://www.math.ethz.ch/'>ETH Zurich</a> (2004-2006), Ph.D. from U.C. Berkeley with advisor <a href='http://math.berkeley.edu/~alanw/'>Alan Weinstein</a> (2004), undergraduate study in <a href='http://www.math.pku.edu.cn/htdocs/main.php'>Bei Jing University</a>.</p>
-<hr/>
-<p><a href='https://www.dropbox.com/s/1edpig6rc4sy9d3/cvzhu.pdf?dl=0'>CV</a>, <a href='http://arxiv.org/a/zhu_c_1'>Publication/arxiv</a>, <a href='http://www.ams.org/msnmain?fn=130&amp;form=fullsearch&amp;preferred_language=en&amp;Submit=Start+Search&amp;pg4=ICN&amp;s4=Zhu%2C+Chenchang&amp;co4=AND&amp;pg5=TI&amp;s5=&amp;co5=AND&amp;pg6=PC&amp;s6=&amp;co6=AND&amp;pg7=ALLF&amp;s7=&amp;dr=all&amp;yrop=eq&amp;arg3=&amp;yearRangFirst=&amp;yearRangeSecond=&amp;pg3=ET&amp;s3=All&amp;l=20&amp;reference_lists=show&amp;simple_headlines=full&amp;redirect=Providence%2C+RI+USA'>Publication/MathSciNet</a></p>
-<hr/>
-<p><strong>Courses/Seminars</strong> (upper level):</p>
+<li>
+<p><a href='https://en.wikipedia.org/wiki/Pierre_Sikivie'>Wikipedia entry</a></p>
+</li>
+</ul>
 
-<p><a class='existingWikiWord' href='/nlab/show/Winter+2017-2018+seminar+on+higher+structures+%28Higher+Lie+Groupoids%29'>Winter 2017-2018 seminar on higher structures (Higher Lie Groupoids)</a></p>
-
-<p><a class='existingWikiWord' href='/nlab/show/Winter+2016-2017+seminar+on+higher+structures'>Winter 2016-2017 seminar on higher structures</a></p>
-
-<p>Summer 2016: Symplectic Geometry, using <a href='https://people.math.ethz.ch/~acannas/'>Ana</a>‘s <a href='https://people.math.ethz.ch/~acannas/Papers/lsg.pdf'>book</a></p>
-
-<p>Winter 2015-2016 <a class='existingWikiWord' href='/nlab/show/lectures+on+higher+bundle+theory'>lectures on higher bundle theory</a>.</p>
-
-<p>Spring 2015 <a class='existingWikiWord' href='/nlab/show/seminar+on+Grothendieck-Teichmuller+theory'>seminar on Grothendieck-Teichmuller theory</a>.</p>
-
-<p>Fall 2014 <a class='existingWikiWord' href='/nlab/show/seminar+on+factorization+algebras'>seminar on factorization algebras</a>.</p>
-<hr/>
-<p><strong>Academic Activities</strong></p>
-
-<p>June 11-22, 2018, <a href='https://ncatlab.org/higherstructureconferences/show/sms2018'>SMS 2018, Derived and Higher Structures in Geometry and Physics</a></p>
-
-<p>July 2017, <a href='https://ncatlab.org/higherstructureconferences/show/Lie+Theory+and+Mathematical+Physics'>Lie Theory and Mathematical Physics</a></p>
-
-<p>16.04.2017–21.04.2017, <a href='http://www.birs.ca/events/2017/5-day-
-workshops/17w5023'>Banff</a></p>
-
-<p>12.04.2017–15.04.2017, Toronto</p>
-
-<p>17.07.2016–23.07.2016, visit <a href='http://www.unige.ch/math/en/people/alekseev/'>Anton</a> in Geneva</p>
-
-<p>02.07.2016–09.07.2016, <a href='http://www.unige.ch/math/Poisson2016/'>Poisson 2016, ETH Zurich</a>, if you want to <a href='http://www.video.ethz.ch/conferences/2016/poisson/day2/d2eb6d7a-7dff-4fa8-ade7-2390b9299340.html?autoplay=true'>see</a> how nervous I was while giving the talk :-P</p>
-
-<p>22.06.2016–26.06.2016, visit <a href='http://www2.math.ethz.ch/u/felder'>Giovanni</a> in ETH Zurich.</p>
-
-<p>10.03.2016–13.03.2016, Leuven, visit Ph.D. brother <a href='https://perswww.kuleuven.be/~u0096206/'>Marco</a></p>
-
-<p>07.03.2016–10.03.2016, MPI Bonn, (a super active place with infinite many mathematicians, and we made progress again in joint project with <a href='http://people.mpim-bonn.mpg.de/blohmann/'>Christian</a> :)</p>
-
-<p>28.02.2016–05.03.2016, visit <a href='http://www.unige.ch/math/en/people/alekseev/'>Anton</a>‘s group in Geneva (a wonderful group full of cool young people!! :)</p>
-
-<p>04.01.2016–08.01.2016, <a class='existingWikiWord' href='/nlab/show/Poisson+Geometry+and+Mathematical+Physics'>Poisson Geometry and Mathematical Physics</a> in <a href='http://www.nim.nankai.edu.cn/nim_e/'>Chern Institute</a> Tianjin, China</p>
-
-<p><a href='https://www.mpim-bonn.mpg.de/HS2015'>Higher Structures in Geometry and Physics, MPI Bonn, Oct. 12–17, 2015</a></p>
-
-<p>3 April – 4 April, a <a class='existingWikiWord' href='/nlab/show/mini-workshop+on+Poisson+geometry'>mini-workshop on Poisson geometry</a> in <a href='http://english.hust.edu.cn/'>Huazhong University of Science and Technology</a> Wuhan, China</p>
-
-<p>28 Feb–5 March, going to Berkeley :).</p>
-
-<p>16 February–19 February, Hamburg <a href='http://www.math.uni-hamburg.de/ids2015/'>Christoph Wockel’s conference</a></p>
-
-<p>Urs Schreiber is visiting 29 Jan and gives a talk at <a href='http://www.uni-goettingen.de/de/207450.html'>GRK colloquium</a>.</p>
-
-<p><a href='http://ncatlab.org/higherstructureconferences/show/higherstructure2014'>Higher Structures in Geometry and Physics, Geneva, Oct. 27–31, 2014</a> , which is one of the <a href='http://ncatlab.org/higherstructureconferences'>series.</a></p>
-<hr/>
-<p><strong>Teaching</strong></p>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_b7e97349e18d9e459bb391cb7c3cafbc87e03cfb_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li>AGLA I (2017-2018 winter) (linear algebra)</li>
+<li><a class='existingWikiWord' href='/nlab/show/axion'>axion</a> <a class='existingWikiWord' href='/nlab/show/fuzzy+dark+matter'>fuzzy dark matter</a></li>
 </ul>
-<hr/>
-<p><strong>Academic and Nonacademic Service</strong></p>
 
-<p>Together with Dima Dudko, we organised a course followed by participation in IMC (international math competition), and this year <a href='http://www.uni-goettingen.de/de/3240.html?cid=5571'>our team</a> got no. 6 worldwise!</p>
-
-<p>I’m one of the people taking care of a <a href='https://www.facebook.com/Chinesischer-Kulturverein-G%C3%B6ttingen-eV-1731003327220934/?skip_nax_wizard=true.'>chinese culture association here in Gottingen</a> with its <a href='http://blog.sina.com.cn/u/6017846563'>Chinese version</a>.</p>
-
-<p>I’m also <a href='http://www.math.uni-goettingen.de/personen/gleichstellungsbeauftragte.html'>Gleichstellungsbeauftragte</a> for math institute :).</p>
-
-<p>I organised <a href='https://www.uni-goettingen.de/en/507545.html'>Girls Day 2016</a> here in Gottingen for higher school girls. <div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
-
-<p>
- 
-</p>
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on October 26, 2017 10:55:56 
-  by <a class="existingWikiWord" href="/nlab/show/Chenchang+Zhu">Chenchang Zhu</a>
-  (134.76.82.111)
+  Created on October 26, 2017 10:59:47 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (195.37.234.86)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Chenchang+Zhu" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Chenchang+Zhu/29" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(29 revisions)</span> | <a href="/nlab/show/diff/Chenchang+Zhu" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Chenchang+Zhu" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Pierre+Sikivie" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Chenchang+Zhu" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Pierre+Sikivie" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Chenchang+Zhu" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Pierre+Sikivie" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Chenchang+Zhu" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Pierre+Sikivie" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
