--- a/pages/2259.html
+++ b/pages/2259.html
@@ -353,7 +353,7 @@ margin-left: 0em;
 <p><em>Selected Papers</em>. Edited by I. Kaplansky. Springer 1979</p>
 </li>
 
-<li>
+<li id='WhiteheadMacLane50'>
 <p>(with <a class='existingWikiWord' href='/nlab/show/Henry+Whitehead'>J. H. C. Whitehead</a>) <em>On the 3-type of a complex</em>, Proc. Nat. Acad. Sci. U.S.A., 36, (1950), 41 – 48 (N.B. Their 3-type is the modern 2-type.)</p>
 
 <p>on <a class='existingWikiWord' href='/nlab/show/homotopy+3-type'>homotopy 3-types</a></p>
@@ -377,14 +377,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 26, 2017 03:14:00 
+  Revised on October 26, 2017 10:30:39 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (195.37.234.86)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Saunders+Mac+Lane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Saunders+Mac+Lane/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/Saunders+Mac+Lane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Saunders+Mac+Lane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Saunders+Mac+Lane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Saunders+Mac+Lane/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/Saunders+Mac+Lane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Saunders+Mac+Lane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
