--- a/pages/18550.html
+++ b/pages/18550.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -339,7 +339,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/locally+convex+space'>locally convex topological vector space</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/locally+convex+topological+vector+space'>locally convex topological vector space</a></p>
 </li>
 
 <li>
@@ -452,7 +452,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>A <em>tempered distribution</em> is a kind of <a class='existingWikiWord' href='/nlab/show/distribution'>distribution</a> for which <a class='existingWikiWord' href='/nlab/show/Fourier+transform+of+distributions'>Fourier transform of distributions</a> is well defined: a <a class='existingWikiWord' href='/nlab/show/linear+functional'>continuous linear functional</a> on the <a class='existingWikiWord' href='/nlab/show/Schwartz+space'>Schwartz space</a> of <a class='existingWikiWord' href='/nlab/show/Schwartz+space'>smooth functions with rapidly decreasing derivatives</a>.</p>
+<p>A <em>tempered (or Schwartz) distribution</em> is a <a class='existingWikiWord' href='/nlab/show/distribution'>distribution</a> <math class='maruku-mathml' display='inline' id='mathml_59a44262e91d86749c7ff33042a8d9acc8453300_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>u</mi><mo>∈</mo><mi>𝒟</mi><mo>′</mo><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>u\in\mathcal{D}&#39;(\mathbb{R}^n)</annotation></semantics></math> that does not “grow too fast” – at most polynomial (or moderate/tempered) growth – at infinity (in all directions); in particular it is only defined on <math class='maruku-mathml' display='inline' id='mathml_59a44262e91d86749c7ff33042a8d9acc8453300_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math>, not on any open subset. Formally, a tempered distribution is a <a class='existingWikiWord' href='/nlab/show/linear+functional'>continuous linear functional</a> on the <a class='existingWikiWord' href='/nlab/show/Schwartz+space'>Schwartz space</a> <math class='maruku-mathml' display='inline' id='mathml_59a44262e91d86749c7ff33042a8d9acc8453300_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒮</mi><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathcal{S}(\mathbb{R}^n)</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/Schwartz+space'>smooth functions with rapidly decreasing derivatives</a>. The space of tempered distributions (with its natural topology) is denoted <math class='maruku-mathml' display='inline' id='mathml_59a44262e91d86749c7ff33042a8d9acc8453300_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒮</mi><mo>′</mo><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathcal{S}&#39;(\mathbb{R}^n)</annotation></semantics></math>. The main property is that its Fourier transform <math class='maruku-mathml' display='inline' id='mathml_59a44262e91d86749c7ff33042a8d9acc8453300_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℱ</mi><mi>u</mi></mrow><annotation encoding='application/x-tex'>\mathcal{F}u</annotation></semantics></math> is well-defined, and is itself a tempered distribution; and that it naturally extends the standard Fourier transform <math class='maruku-mathml' display='inline' id='mathml_59a44262e91d86749c7ff33042a8d9acc8453300_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℱ</mi><mo>:</mo><msup><mi>L</mi> <mn>2</mn></msup><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo><mo>→</mo><msup><mi>L</mi> <mn>2</mn></msup><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathcal{F}: L^2(\mathbb{R}^n) \to L^2(\mathbb{R}^n)</annotation></semantics></math>. This makes tempered distributions the natural setting for solving (linear) partial differential equations.</p>
 
 <h2 id='definition'>Definition</h2>
 
@@ -461,9 +461,9 @@ margin-left: 0em;
 
 <p><strong>(tempered distributions)</strong></p>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_f7f3e9e9fc2ae8cab74f464031003cf4a31dbd58_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math>, a <em><a class='existingWikiWord' href='/nlab/show/tempered+distribution'>tempered distribution</a></em> on the <a class='existingWikiWord' href='/nlab/show/Euclidean+space'>Euclidean space</a> <math class='maruku-mathml' display='inline' id='mathml_f7f3e9e9fc2ae8cab74f464031003cf4a31dbd58_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/linear+functional'>continuous linear functional</a> on the <a class='existingWikiWord' href='/nlab/show/Schwartz+space'>Schwartz space</a> <math class='maruku-mathml' display='inline' id='mathml_f7f3e9e9fc2ae8cab74f464031003cf4a31dbd58_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒮</mi><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathcal{S}(\mathbb{R}^n)</annotation></semantics></math> (<a href='Schwartz+space#SchwartzSpaceOfFunctionsWithRapidlyDecreasingDerivatives'>this def.</a>) of <a class='existingWikiWord' href='/nlab/show/Schwartz+space'>smooth functions with rapidly decreasing derivatives</a>.</p>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_59a44262e91d86749c7ff33042a8d9acc8453300_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math>, a <em><a class='existingWikiWord' href='/nlab/show/tempered+distribution'>tempered distribution</a></em> on the <a class='existingWikiWord' href='/nlab/show/Euclidean+space'>Euclidean space</a> <math class='maruku-mathml' display='inline' id='mathml_59a44262e91d86749c7ff33042a8d9acc8453300_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/linear+functional'>continuous linear functional</a> on the <a class='existingWikiWord' href='/nlab/show/Schwartz+space'>Schwartz space</a> <math class='maruku-mathml' display='inline' id='mathml_59a44262e91d86749c7ff33042a8d9acc8453300_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒮</mi><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathcal{S}(\mathbb{R}^n)</annotation></semantics></math> (<a href='Schwartz+space#SchwartzSpaceOfFunctionsWithRapidlyDecreasingDerivatives'>this def.</a>) of <a class='existingWikiWord' href='/nlab/show/Schwartz+space'>smooth functions with rapidly decreasing derivatives</a>.</p>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/topological+vector+space'>topological vector space</a> of tempered distributions is denoted <math class='maruku-mathml' display='inline' id='mathml_f7f3e9e9fc2ae8cab74f464031003cf4a31dbd58_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒮</mi><mo>′</mo><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathcal{S}&#39;(\mathbb{R}^n)</annotation></semantics></math>.</p>
+<p>The <a class='existingWikiWord' href='/nlab/show/topological+vector+space'>topological vector space</a> of tempered distributions is denoted <math class='maruku-mathml' display='inline' id='mathml_59a44262e91d86749c7ff33042a8d9acc8453300_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒮</mi><mo>′</mo><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathcal{S}&#39;(\mathbb{R}^n)</annotation></semantics></math>.</p>
 </div>
 
 <p>(e.g. <a href='#Hoermander90'>Hörmander 90, def. 7.1.7</a>)</p>
@@ -493,14 +493,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on August 14, 2017 04:44:37 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.75.2)
+  Revised on October 26, 2017 15:57:37 
+  by <span class="newWikiWord">liuyao<a href="/nlab/new/liuyao">?</a></span>
+  (24.39.209.50)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/tempered+distribution" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/tempered+distribution/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/tempered+distribution" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/tempered+distribution" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/tempered+distribution" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/tempered+distribution/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/tempered+distribution" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/tempered+distribution" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
