--- a/pages/18730.html
+++ b/pages/18730.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Errett Bishop in nLab
+      Mikhail Shaposhnikov in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Errett Bishop
+      Mikhail Shaposhnikov
   </h1>
 
 
@@ -308,68 +308,36 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='errett_bishop'>Errett Bishop</h1>
-
-<p>Errett Bishop (1928–1983) was responsible for reviving interest in <a class='existingWikiWord' href='/nlab/show/constructive+mathematics'>constructive mathematics</a> as a branch of <a class='existingWikiWord' href='/nlab/show/mathematics'>mathematics</a>. Before this, he had a career in areas of classical (i.e., non-constructive) <a class='existingWikiWord' href='/nlab/show/analysis'>analysis</a>, including <span class='newWikiWord'>approximation theory<a href='/nlab/new/approximation+theory'>?</a></span>, <a class='existingWikiWord' href='/nlab/show/several+complex+variables'>several complex variables</a>, <a class='existingWikiWord' href='/nlab/show/algebra+of+functions'>function algebras</a>, and other fields.</p>
-<div class='maruku_toc'><ul><li><a href='#successes_in_constructive_mathematics'>Successes in constructive mathematics</a></li><li><a href='#inadequacies_for_constructive_mathematics'>Inadequacies for constructive mathematics</a></li></ul></div>
-<h2 id='successes_in_constructive_mathematics'>Successes in constructive mathematics</h2>
-
-<p>While <a class='existingWikiWord' href='/nlab/show/L.E.J.+Brouwer'>Brouwer</a> had insisted that mathematics was primary to <a class='existingWikiWord' href='/nlab/show/logic'>logic</a>, the <a class='existingWikiWord' href='/nlab/show/intuitionistic+mathematics'>intuitionists</a> who followed him went more into intuitionistic <a class='existingWikiWord' href='/nlab/show/foundation+of+mathematics'>foundations</a> and <a class='existingWikiWord' href='/nlab/show/philosophy'>philosophy</a> than into mathematics as such. The <a class='existingWikiWord' href='/nlab/show/Russian+constructivism'>Russian school</a> of constructivism focussed on <a class='existingWikiWord' href='/nlab/show/computability'>recursion theory</a> and was far removed from modern <a class='existingWikiWord' href='/nlab/show/Bourbaki'>Bourbaki</a>-style mathematics. There was a pervasive feeling that constructive mathematics, particularly constructive <a class='existingWikiWord' href='/nlab/show/analysis'>analysis</a>, was simply unworkable; Bishop attacked this idea, not by arguing against it, but by simply demonstrating how constructive analysis could be done.</p>
-
-<p>Bishop&#39;s important works in constructive mathematics include:</p>
-
-<ul>
-<li>
-<p><em><a class='existingWikiWord' href='/nlab/show/Foundations+of+Constructive+Analysis'>Foundations of Constructive Analysis</a></em> (1967), the work which made him famous in the foundations of mathematics circles;</p>
-</li>
-
-<li>
-<p>“Schizophrenia in contemporary mathematics” (1973), a philosophical attack on nonconstructive mathematics;</p>
-
-<p>see also: “The crisis in contemporary mathematics”, Historia Mathematica Volume 2, Issue 4, November 1975, Pages 507-517 (<a href='https://doi.org/10.1016/0315-0860(75'>doi.org/10.1016/0315-0860(75)90113-5</a>90113-5))</p>
-</li>
-
-<li>
-<p><em>Constructive Measure Theory</em> (1972, with <span class='newWikiWord'>Henry Cheng<a href='/nlab/new/Henry+Cheng'>?</a></span>), featuring a better <a class='existingWikiWord' href='/nlab/show/measure+theory'>measure theory</a> than in <em>FCA</em>;</p>
-</li>
-
-<li>
-<p><em>Constructive Analysis</em> (1985, with <a class='existingWikiWord' href='/nlab/show/Douglas+Bridges'>Douglas Bridges</a>), a revised version of <em>FCA</em>, incorporating the measure theory of <em>CMT</em>.</p>
-</li>
+    <ul>
+<li><a href='https://lppc.epfl.ch/Shaposhnikov'>webpage</a></li>
 </ul>
 
-<p>Bishop&#39;s constructive mathematics was weakly <a class='existingWikiWord' href='/nlab/show/predicative+mathematics'>predicative</a> and can be formulated within any <a class='existingWikiWord' href='/nlab/show/locally+cartesian+closed+category'>locally cartesian closed</a> <a class='existingWikiWord' href='/nlab/show/pretopos'>pretopos</a> with a <a class='existingWikiWord' href='/nlab/show/natural+numbers+object'>natural numbers object</a> and <a class='existingWikiWord' href='/nlab/show/dependent+choice'>dependent choice</a>. (The measure theory from <em>FCA</em>, before the revised version from <em>CMT</em>, is an exception; it can be formulated in any <a class='existingWikiWord' href='/nlab/show/topos'>topos</a> with an NNO.)</p>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_96da82fa2401f1019236df0d76f23803e6ed4ea3_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
-<p>Bishop&#39;s work was primarily in <a class='existingWikiWord' href='/nlab/show/analysis'>analysis</a>, because constructive mathematics is more difficult at an elementary level there. Bishop&#39;s style was extended to constructive <a class='existingWikiWord' href='/nlab/show/algebra'>algebra</a> by his disciple <a class='existingWikiWord' href='/nlab/show/Fred+Richman'>Fred Richman</a>.</p>
-
-<h2 id='inadequacies_for_constructive_mathematics'>Inadequacies for constructive mathematics</h2>
-
-<p>There is some confusion about the notion of <a class='existingWikiWord' href='/nlab/show/continuous+map'>continuous function</a> (from <math class='maruku-mathml' display='inline' id='mathml_6227a11111bf2c369142c76c2b88bcf53e322285_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R}</annotation></semantics></math> to <math class='maruku-mathml' display='inline' id='mathml_6227a11111bf2c369142c76c2b88bcf53e322285_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R}</annotation></semantics></math>) in Bishop&#39;s work, diagnosed by <a class='existingWikiWord' href='/nlab/show/Frank+Waaldijk'>Frank Waaldijk</a> in <em><a href='http://www.fwaaldijk.nl/mathematics.html'>On the foundations of constructive mathematics - especially in relation to the theory of continuous functions</a></em> (2001). In particular, <em>FCA</em> and <em>CA</em> use different definitions. These can be reconciled using the <a class='existingWikiWord' href='/nlab/show/fan+theorem'>fan theorem</a> (which Bishop rejected). There is a similar problem with the notion of <a class='existingWikiWord' href='/nlab/show/locally+compact+topological+space'>locally compact space</a>.</p>
-
-<p>More generally, Bishop worked with <a class='existingWikiWord' href='/nlab/show/metric+space'>metric spaces</a> but rejected more general <a class='existingWikiWord' href='/nlab/show/topological+space'>topological spaces</a> as unnecessary for mathematics. From the perspective of modern constructive mathematics, Bishop may be praised for reviving the discipline, but much of his work must be rejected as inadequate in favour of <a class='existingWikiWord' href='/nlab/show/locale'>locale</a> theory. In particular, the definition of continuous function on the <a class='existingWikiWord' href='/nlab/show/locale+of+real+numbers'>locale of real numbers</a> agrees with neither of Bishop&#39;s books; the same goes for locally compact spaces and measure theory.</p>
-
-<p>Summarising, Bishop studied pointwise analysis, but constructive pointwise analysis appears to be unworkable after all (without the fan theorem). Although Bishop went farther with it than previously thought possible, one can go farther yet with a localic approach.</p>
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/baryogenesis'>baryogenesis</a></li>
+</ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on October 31, 2017 04:16:03 
+  Created on October 31, 2017 04:38:57 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Errett+Bishop" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Errett+Bishop/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Errett+Bishop" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Errett+Bishop" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Mikhail+Shaposhnikov" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Errett+Bishop" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Mikhail+Shaposhnikov" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Errett+Bishop" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Mikhail+Shaposhnikov" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Errett+Bishop" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Mikhail+Shaposhnikov" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
